# agent_runtime

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LINTING.md  README.md  go.mod  go.sum  kled-simplified  pyproject.toml  reorganize_agent_framework.py  requirements.txt  setup.py  update_django_imports.py  update_imports.py
.gitea/workflows/: cd.yml  ci.yml
.github/workflows/: cd.yml  ci.yml  golangci-lint.yml
agent/agent/: agents.py  history_processors.py  reviewer.py
agent/environment/: swe_env.py
agent/run/: run_replay.py  run_single.py
agent/tools/: commands.py
agent/utils/: jinja_warnings.py
argocd/: application.yaml  rollback-hook.yaml
backend/: API_DOCUMENTATION.md  GRPC_API_DOCUMENTATION.md  README.md  agent_runtime.sqlite3  check_db_config.py  check_db_connections.py  grpc_server.py  requirements.txt  run_database_tests.py  run_database_tests.sh  run_database_verification.py  run_database_verification.sh  run_mock_database_tests.py  test_all_databases.py  test_database_connections.py  test_integration.py  test_mock_databases.py  test_shared_state_integration.py  test_standalone_db.py  verify_db_connections.py
backend/agent_api/: asgi.py  database_config.py  database_config_doris.py  database_config_kafka.py  database_config_postgres.py  database_routers.py  routing.py  settings.py  urls.py  vault.py  wsgi.py
backend/api/: consumers.py  grpc_bridge.py  grpc_client.py  models.py  ninja_api.py  serializers.py  socketio_consumer.py  urls.py  views.py  websocket_manager.py  websocket_state.py
backend/docs/: database_setup.md
backend/integrations/: crunchydata.py  doris.py  kafka.py  postgres_operator.py
backend/ml_api/: serializers.py  views.py
backend/protos/: agent.proto
backend/templates/: redoc.html
backup/problematic_files/: agent_service.go  broker.go  client.go  service.go  test_micro.go
cmd/: main.go
cmd/agent/: main.go
cmd/agent_runtime/: README.md  grpc_server.go  main.go  state_cmd.go
cmd/cli/: main.go
cmd/config_loader/: main.go
cmd/config_sync/: main.go
cmd/config_test/: main.go
cmd/config_verify/: main.go
cmd/kled/: main.go
cmd/kled-simplified/: main.go
cmd/kled_demo/: main.go
cmd/langraph_demo/: main.go
cmd/server/: main.go
cmd/sharedstate/: main.go  test_server.go
config/agent/: README.md
config/auth/: policy.csv
config/kata/: configuration.toml
design/neovim/: state_management.md
django_backend/: SHARED_STATE_DOCUMENTATION.md  db.sqlite3  grpc_server.py  simple_grpc_server.py  test_grpc_client.py  test_shared_state.py  wsgi.py
django_backend/agent_api/: asgi.py  settings.py  urls.py
django_backend/api/: grpc_service.py  ninja_api.py  pydantic_adapter.py  serializers.py  swagger.py  urls.py  views.py  websocket.py
django_backend/examples/: grpc_client_example.py
django_backend/ml_api/: serializers.py  urls.py  views.py
django_backend/protos/: agent.proto  agent_pb2.py  agent_pb2_grpc.py
django_backend/scripts/: generate_grpc_code.py
django_backend/templates/: swagger-ui.html
docs/: README.md  architecture.md  awesome_go_integration.md  bubbletea_integration.md  casbin_integration_plan.md  clair_integration_analysis.md  coder_integration.md  coder_integration_analysis.md  colly_integration.md  cpp_interpreter.md  database_integration_report.md  database_integration_verification.md  django_go_integration.md  django_go_integration_guide.md  go_micro_integration_plan.md  gods_integration.md  hydra_integration.md  hydra_integration_details.md  integration_analysis.md  k9s_integration.md  kafka_k8s_monitoring.md  kops_integration.md  kubernetes_terraform_compatibility.md  langraph_integration.md  langsmith_integration.md  langsmith_self_hosting.md  mcp_go_architecture.md  mcp_server_integration.md  multi_agent_communication.md  neovim_integration_verification.md  postgres_operator_setup.md  rsc_integration.md
docs/api/: README.md
docs/architecture/: README.md
docs/examples/: README.md
docs/guides/: README.md
docs/integration/: ide_environment_integration.md
docs/neovim/: research_summary.md
docs/research/: python_ffi_integration.md
examples/orchestration/: workflow_example.go
frontend/: README.md  demo.html  eslint.config.js  package-lock.json  package.json  postcss.config.ts  rsbuild.config.ts  tailwind.config.js  tailwind.config.ts  tsconfig.json  webpack.config.mjs
frontend/docs/: ui-kit-architecture.md
frontend/public/: index.html  manifest.json  minimal.html  standalone.html
frontend/scripts/: detect-node-version.ts  setup-shadcn.js  setup-shadcn.ts
frontend/src/: App.tsx  Run.tsx  basic-entry.tsx  final-entry.tsx  index.tsx  main.tsx  minimal-entry.tsx  root.tsx  routes.tsx  simplified-entry.tsx
frontend/temp-app/: index.html  (+4 more)
go_configs/: prompts.txt  tools.json
k8s/: k8s_handlers.go  main.go  policy_handlers.go  vcluster_handlers.go
kubernetes/: database-config.yaml  database-service-discovery.yaml  dragonfly-deployment.yaml  k8s-monitor-deployment.yaml  kafka-deployment.yaml  postgres-cluster.yaml  vault-deployment.yaml  yap2db-deployment.yaml  yap2db-kata.yaml  yap2db-vcluster.yaml
protos/: agent_bridge.proto
python_agent/: README.md
scripts/: deploy_langsmith.sh  drift-detection.sh  enhanced-drift-detection.sh  fix_lint.py  generate_protos.py  install_proto_deps.py  package.json  proper_grpc_server.go  pydantic_integration.py  run_tests.py  setup_langsmith_k8s.sh  simple_grpc_server.go  standalone_grpc_server.go  start_grpc_server.go  test_langsmith_integration.sh  tsconfig.json  update_imports.py  update_terraform_references.py  update_yaml_references.py  validate_yaml.py  verify_backend_implementation.py  verify_langraph_integration.sh  verify_langsmith_deployment.sh
src/: mock_test_scrapers.py
swe_tests/: test_env_utils.py  test_packaging.py  test_run_batch.py  test_run_single.py
swerex/: server.py
terraform/: CHANGES.md  README.md  main.tf  outputs.tf  variables.tf
tests/: conftest.py  test_agent.py  test_models.py  test_parsing.py  test_repo.py  test_run_replay.py  test_run_single.py  test_utils.py
(+1356 files in other folders)
