# pyproject.toml for Python dependencies within the Go agent_runtime project

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent_runtime_python_deps" # Placeholder name
version = "0.1.0" # Placeholder version
description = "Python dependencies for SWE-Agent components integrated into agent_runtime."
requires-python = ">=3.11"
license = { text = "MIT" } # Assuming MIT based on SWE-Agent, adjust if needed

# Core dependencies from SWE-Agent, Django backend, and ML infrastructure
dependencies = [
    # SWE-Agent dependencies
    "datasets",
    "numpy",
    "pandas",
    "rich",
    "ruamel.yaml",
    "tenacity",
    "unidiff",
    "simple-parsing",
    "rich-argparse",
    "flask",
    "flask-cors",
    "flask-socketio",
    "pydantic>=2.0.0", # Ensure v2+ for SWE-ReX compatibility
    "python-dotenv",
    "pydantic_settings",
    "litellm",
    "GitPython",
    "ghapi",
    "tabulate",
    "textual>=1.0.0",
    
    # SWE-ReX dependencies
    "fastapi",
    "uvicorn",
    "requests",
    "pexpect",
    "bashlex",
    "python-multipart",
    "boto3",
    "modal",
    
    # Django backend dependencies
    "Django==5.2",
    "djangorestframework==3.16.0",
    "django-cors-headers==4.7.0",
    "grpcio==1.71.0",
    "grpcio-tools==1.71.0",
    "mysqlclient==2.2.4",
    "django-redis==5.4.0",
    "redis==5.0.1",
    "pinecone-client==3.0.0",
    "django-ninja",
    "channels",
    
    # Additional dependencies from requirements.txt
    "aiohttp>=3.8.0",
    "asyncio>=3.4.3",
    "python-dateutil>=2.8.2",
    "tqdm>=4.65.0",
    
    # Additional dependencies from python_agent/agent/api/requirements.txt
    "anthropic>=0.25.3",
    "blinker>=1.7.0",
    "certifi>=2024.2.2",
    "cloudpickle>=3.0.0",
    "config>=0.5.1",
    "docker>=7.0.0",
    "gymnasium>=0.29.1",
    "multidict>=6.0.5",
    "multiprocess>=0.70.16",
    "ollama>=0.1.8",
    "openai>=1.20.0",
    "pyarrow>=15.0.2",
    "pytz>=2024.1",
    "PyYAML>=6.0.1",
    "swebench>=1.1.0",
    "tokenizers>=0.15.2",
]

[project.scripts]
sweagent = "sweagent.run.run:main"


[project.optional-dependencies]
# Development dependencies from SWE-Agent
dev = [
    "mike",
    "mkdocs-material",
    "mkdocs-glightbox",
    "mkdocs-include-markdown-plugin",
    "mkdocstrings[python]>=0.18",
    "pytest>=7.0.0",
    "pytest-cov",
    "pipx",
    "pre-commit",
    "pytest-xdist",
    "griffe-pydantic!=1.1.3",
    "pytest-asyncio>=0.21.0", # Added to handle async tests properly
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.setuptools]
# Add minimal setuptools config if needed, e.g., to find packages if installing
# packages = ["sweagent", "tools", "tests"] # Might be needed if installing via pip
include-package-data = true

[tool.setuptools.packages.find]
where = ["."] # Search for packages in the root directory
include = ["agent*", "tools*", "tests*", "agent_framework*"] # Include copied SWE-Agent and SWE-ReX dirs
namespaces = false

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function" # Explicitly set scope

markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "cloud: mark tests for modal/fargate/etc.",
]

# UV configuration is handled through environment variables and command line options
# rather than in pyproject.toml directly
